closure: support unichar args

https://bugzilla.gnome.org/show_bug.cgi?id=759276